fix scrollbar issue when a dropdown flows outside a popup

--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -15,6 +15,7 @@
     overflow-y: auto
     padding: 1rem 2.6rem 0
     font-size: 1.6rem
+    overflow: visible
 
   .prompt-input
     margin-bottom: 2.4rem
